--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"next-themes": "^0.4.4",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
+		"react-markdown": "^9.0.1",
 		"recharts": "^2.15.0",
 		"usehooks-ts": "^3.1.0"
 	},
