--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
 		"react-markdown": "^9.0.1",
+		"react-type-animation": "^3.2.0",
 		"recharts": "^2.15.0",
 		"usehooks-ts": "^3.1.0"
 	},
