--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"react-markdown": "^9.0.1",
 		"react-type-animation": "^3.2.0",
 		"recharts": "^2.15.0",
+		"tailwind-scrollbar": "^3.1.0",
 		"usehooks-ts": "^3.1.0"
 	},
 	"devDependencies": {
