--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"react-type-animation": "^3.2.0",
 		"recharts": "^2.15.0",
 		"tailwind-scrollbar": "^3.1.0",
+		"tailwindcss-motion": "^1.0.0",
 		"usehooks-ts": "^3.1.0"
 	},
 	"devDependencies": {
