fix: Remove redundant imports

--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
 		"@nextui-org/snippet": "2.2.4",
 		"@nextui-org/switch": "2.2.3",
 		"@nextui-org/system": "2.4.3",
-		"@nextui-org/theme": "2.4.1",
+		"@nextui-org/theme": "^2.4.4",
 		"@react-aria/ssr": "3.9.7",
 		"@react-aria/visually-hidden": "3.8.18",
 		"clsx": "2.1.1",
+		"drizzle-orm": "^0.38.3",
 		"framer-motion": "11.13.1",
+		"hono": "^4.6.15",
 		"intl-messageformat": "^10.5.0",
 		"next": "15.0.4",
 		"next-themes": "^0.4.4",
