--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 	},
 	"dependencies": {
 		"@hono/swagger-ui": "^0.5.0",
-		"@hono/valibot-validator": "^0.5.1",
+		"@hono/zod-validator": "^0.4.2",
 		"@nextui-org/button": "2.2.3",
 		"@nextui-org/code": "2.2.3",
 		"@nextui-org/input": "2.4.3",
@@ -28,10 +28,8 @@
 		"@react-aria/ssr": "3.9.7",
 		"@react-aria/visually-hidden": "3.8.18",
 		"@t3-oss/env-nextjs": "^0.11.1",
-		"@valibot/to-json-schema": "^1.0.0-beta.3",
 		"clsx": "2.1.1",
 		"drizzle-orm": "^0.38.3",
-		"drizzle-valibot": "^0.3.1",
 		"framer-motion": "11.13.1",
 		"hono": "^4.6.15",
 		"hono-openapi": "^0.3.1",
@@ -49,7 +47,8 @@
 		"tailwindcss-motion": "^1.0.0",
 		"usehooks-ts": "^3.1.0",
 		"uuid": "^11.0.3",
-		"valibot": "^1.0.0-beta.9"
+		"zod": "^3.24.1",
+		"zod-openapi": "^4.2.2"
 	},
 	"devDependencies": {
 		"@iconify/react": "^5.1.0",
