--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
 		"dev": "next dev --turbopack",
 		"build": "next build",
 		"start": "next start",
-		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
+		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix",
+		"db:generate": "npx drizzle-kit generate",
+		"db:migrate": "npx drizzle-kit migrate"
 	},
 	"dependencies": {
+		"@hono/swagger-ui": "^0.5.0",
+		"@hono/zod-validator": "^0.4.2",
 		"@nextui-org/button": "2.2.3",
 		"@nextui-org/code": "2.2.3",
 		"@nextui-org/input": "2.4.3",
@@ -23,13 +27,17 @@
 		"@nextui-org/theme": "^2.4.4",
 		"@react-aria/ssr": "3.9.7",
 		"@react-aria/visually-hidden": "3.8.18",
+		"@t3-oss/env-nextjs": "^0.11.1",
 		"clsx": "2.1.1",
 		"drizzle-orm": "^0.38.3",
 		"framer-motion": "11.13.1",
 		"hono": "^4.6.15",
+		"hono-openapi": "^0.3.1",
+		"hono-simple-di": "^0.2.1",
 		"intl-messageformat": "^10.5.0",
 		"next": "15.0.4",
 		"next-themes": "^0.4.4",
+		"pg": "^8.13.1",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
 		"react-markdown": "^9.0.1",
@@ -37,18 +45,24 @@
 		"recharts": "^2.15.0",
 		"tailwind-scrollbar": "^3.1.0",
 		"tailwindcss-motion": "^1.0.0",
-		"usehooks-ts": "^3.1.0"
+		"usehooks-ts": "^3.1.0",
+		"uuid": "^11.0.3",
+		"zod": "^3.24.1",
+		"zod-openapi": "^4.2.2"
 	},
 	"devDependencies": {
 		"@iconify/react": "^5.1.0",
 		"@next/eslint-plugin-next": "15.0.4",
 		"@react-types/shared": "3.25.0",
 		"@types/node": "20.5.7",
+		"@types/pg": "^8.11.10",
 		"@types/react": "18.3.3",
 		"@types/react-dom": "18.3.0",
+		"@types/uuid": "^10.0.0",
 		"@typescript-eslint/eslint-plugin": "8.11.0",
 		"@typescript-eslint/parser": "8.11.0",
 		"autoprefixer": "10.4.19",
+		"drizzle-kit": "^0.30.1",
 		"eslint": "^8.57.0",
 		"eslint-config-next": "15.0.4",
 		"eslint-config-prettier": "9.1.0",
@@ -63,6 +77,7 @@
 		"prettier": "3.3.3",
 		"tailwind-variants": "0.1.20",
 		"tailwindcss": "3.4.16",
+		"tsx": "^4.19.2",
 		"typescript": "5.6.3"
 	}
 }
