--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"db:migrate": "npx drizzle-kit migrate"
 	},
 	"dependencies": {
+		"@azure/openai": "^2.0.0",
 		"@hono/swagger-ui": "^0.5.0",
 		"@hono/zod-validator": "^0.4.2",
 		"@nextui-org/button": "2.2.3",
@@ -37,6 +38,7 @@
 		"intl-messageformat": "^10.5.0",
 		"next": "15.0.4",
 		"next-themes": "^0.4.4",
+		"openai": "^4.77.0",
 		"pg": "^8.13.1",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
